--- a/index.html
+++ b/index.html
@@ -16,14 +16,17 @@
     <div class="product-card">
       
       <img src="images/image-product-mobile.jpg" alt="Image of Gabrielle perfume by Chanel" class="product-image">
-      <h2 class="category">Perfume</h2>
-      <h1 class="product-title">Gabrielle Essence Eau De Parfum</h1>
-      <p class="description">
-        A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-        Perfumer-Creator for the House of CHANEL.
-      </p>
-      <p><span class="current-price">$149.99</span><span class="full-price">$169.99</span></p>
-      <button class="add-to-cart-btn">Add to Cart</button>
+      <div class="product-text">
+        <h2 class="category">Perfume</h2>
+        <h1 class="product-title">Gabrielle Essence Eau De Parfum</h1>
+        <p class="description">
+         A floral, solar and voluptuous interpretation composed by Olivier Polge, 
+         Perfumer-Creator for the House of CHANEL.
+        </p>
+        <p class="prices"><span class="current-price">$149.99</span><span class="full-price">$169.99</span></p>
+        <button class="add-to-cart-btn">Add to Cart</button>
+      </div>
+      
     </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
