--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
          Perfumer-Creator for the House of CHANEL.
         </p>
         <p class="prices"><span class="current-price">$149.99</span><span class="full-price">$169.99</span></p>
-        <button class="add-to-cart-btn">Add to Cart</button>
+        <button class="add-to-cart-btn"><img src="images/icon-cart.svg" alt="add to cart" class ="btn-icon">Add to Cart</button>
       </div>
+      
       
     </div>
   <div class="attribution">
